--- a/preamble.tex
+++ b/preamble.tex
@@ -291,12 +291,14 @@ pdfkeywords={machine learning}
 \crefname{stepsi}{Step}{Steps}
 \crefname{problem}{Problem}{Problems}
 
-\crefname{equation}{}{}
-\crefformat{equation}{#2(#1)#3}
-\crefrangeformat{equation}{#3(#1)#4 to #5(#2)#6}
-\crefmultiformat{equation}{#2(#1)#3}{ and #2(#1)#3}{, #2(#1)#3}{ and #2(#1)#3}
-\crefrangemultiformat{equation}{#3(#1)#4 to #5(#2)#6}{ and #3(#1)#4 to #5(#2)#6}%
-{, #3(#1)#4 to #5(#2)#6}{ and #3(#1)#4 to #5(#2)#6}
+% Uncommenting this brings problems when referrencing equations.
+
+%\crefname{equation}{}{}
+%\crefformat{equation}{#2(#1)#3}
+%\crefrangeformat{equation}{#3(#1)#4 to #5(#2)#6}
+%\crefmultiformat{equation}{#2(#1)#3}{ and #2(#1)#3}{, #2(#1)#3}{ and #2(#1)#3}
+%\crefrangemultiformat{equation}{#3(#1)#4 to #5(#2)#6}{ and #3(#1)#4 to #5(#2)#6}%
+%{, #3(#1)#4 to #5(#2)#6}{ and #3(#1)#4 to #5(#2)#6}
 
 %----------------------------------------------+
 % Half-title, titlepage and copyright settings |
